--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,55 +1,55 @@
 {
     "menu": {
         "homepage": "Homepage",
-        "services": "Services",
-        "contacts": "Contacts",
-        "language" : {
+        "services": "Our Services",
+        "contacts": "Contact Information",
+        "language": {
             "english": "EN",
             "finnish": "FI",
             "swedish": "SWE"
         }
     },
-    "slogan": "Goobye",
-    "slogan_description": "",
-    "services" : {
-        "services_description": "",
-        "home_service": "",
-        "home_service_description": "",
-        "home_nursing_care": "",
-        "home_nursing_care_description": "",
-        "home_cleaning": "",
-        "home_cleaning_description": "",
-        "voucher": "",
-        "voucher_description": ""
+    "slogan": "We help because we care",
+    "slogan_description": "We provide quality services at home. Our goal is to support customers in living independently and safely at home.",
+    "services": {
+        "services_description": "We provide home care, home nursing care, and support services for seniors, people with disabilities, and those with developmental disabilities. We serve in Helsinki, Espoo, Vantaa, and Kirkkonummi.",
+        "home_service": "Home Services",
+        "home_service_description": "We offer help and assistance with daily activities (assistance, personal hygiene, meals, outdoor activities, shopping services). We ensure that customers have a safe home environment.",
+        "home_nursing_care": "Home Nursing Care",
+        "home_nursing_care_description": "We provide basic nursing care (wound care, medication, injections, catheterization, suture removal). We ensure that customers receive quality care at home.",
+        "home_cleaning": "Home Cleaning",
+        "home_cleaning_description": "We offer home cleaning and laundry services. A key aspect of home cleaning is maintaining cleanliness for the customers' meaningful living.",
+        "voucher": "Service Vouchers",
+        "voucher_description": "We also accept service vouchers issued by the City of Helsinki for home care and home cleaning services. A service voucher is a payment commitment that allows you to purchase services from private providers."
     },
-    "values": "",
-    "dignity": "",
-    "self_determination": "",
-    "trust": "",
-    "independence": "",
-    "feedback": "Feedback",
-    "manager": "Manager",
-    "cleaning_customer": "Cleaning customer",
-    "customer": "Customer",
-    "customer_satisfaction": "Yes",
-    "survey_language": "",
-    "survey_treatment": "",
-    "survey_satisfaction": "",
-    "survey_goal": "",
-    "survey_punctuality": "",
-    "survey_effort": "",
+    "values": "Our Values",
+    "dignity": "Human dignity is a value that everyone is born with. Human dignity means equality.",
+    "self_determination": "Self-determination is the freedom to choose and live on one's own terms. Trust is relying on another's help and agreed times. The unit's operating principles are customer-centeredness, reliability, comprehensiveness, continuity, commitment, safety, and interaction.",
+    "trust": "Services provided at home are delivered confidentially and naturally. We respect the customer's self-determination and their ways of operating.",
+    "independence": "Customers are guided towards independent action respectfully. A rehabilitative approach is used in work and customers are encouraged towards self-sufficiency. Services always comply with the city's regulations for service voucher services.",
+    "feedback": "Our Feedback",
+    "manager": "supervisor",
+    "cleaning_customer": "cleaning customer",
+    "customer": "customer",
+    "customer_satisfaction": "Customer Satisfaction",
+    "survey_language": "Have you been able to converse with the cleaner in Finnish/Swedish?",
+    "survey_treatment": "Have you received respectful treatment from the cleaner?",
+    "survey_satisfaction": "Have you been satisfied with the cleaning work done?",
+    "survey_goal": "Did the cleaner take your wishes into account in the execution of the cleaning?",
+    "survey_punctuality": "Did the cleaner arrive at your home at the agreed time to clean?",
+    "survey_effort": "Has dealing with the service provider been effortless?",
     "yes": "Yes",
     "no": "No",
     "no_answer": "No answer",
-    "send_message_title": "Hello",
+    "send_message_title": "Send us a message",
     "name": "Name",
-    "email": "Email address",
+    "email": "Your email address",
     "message": "Message",
     "send": "Send",
     "footer": {
-        "plan": "",
-        "contacts": "Contacts",
-        "business_number": "",
-        "social_media": "Social media"
+        "plan": "View the self-monitoring plan here",
+        "contacts": "Contact Information",
+        "business_number": "Business ID",
+        "social_media": "Social Media"
     }
 }
