Language translation implemented in components

--- a/src/components/language/en.json
+++ b/src/components/language/en.json
@@ -42,5 +42,6 @@
     "send": "Send",
     "plan": "View the self-monitoring plan here",
     "business_number": "Business ID",
-    "social_media": "Social Media"
+    "social_media": "Social Media",
+    "rights_reserved": "All rights reserved."
 }
