--- a/src/components/language/fi.json
+++ b/src/components/language/fi.json
@@ -42,5 +42,6 @@
     "send": "Lähetä",
     "plan": "Katso omavalvontasuunnitelma tästä ",
     "business_number": "Y-tunnus",
-    "social_media": "Sosiaalinen Media"
+    "social_media": "Sosiaalinen Media",
+    "rights_reserved": "Kaikki oikeudet pidätetään"
 }
